@@ -28,6 +28,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-3212: Race Conditions in POSort and (Internal)SortedBag during Proactive Spill (kadeng via dvryaboy)
+
 PIG-3206: HBaseStorage does not work with Oozie pig action and secure HBase (rohini)
 
 
